[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Classic-Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://StartScreen.gd" type="Script" id=2]
[ext_resource path="res://Components/Transition_Out.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -416.0
margin_top = 72.0
margin_right = 416.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 2 )
text = "Logical Ports
 "
align = 1
valign = 1

[node name="Controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -82.0
margin_right = 156.0
margin_bottom = 82.0
custom_constants/separation = 20

[node name="StartButton" type="Button" parent="Controls"]
margin_right = 312.0
margin_bottom = 26.0
custom_colors/font_color_hover = Color( 0, 0.0627451, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.937255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Jogar"

[node name="About" type="Button" parent="Controls"]
margin_top = 46.0
margin_right = 312.0
margin_bottom = 72.0
custom_colors/font_color_hover = Color( 0, 0.0627451, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.937255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sobre as portas"

[node name="StartButton2" type="Button" parent="Controls"]
margin_top = 92.0
margin_right = 312.0
margin_bottom = 118.0
custom_colors/font_color_hover = Color( 0, 0.0627451, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.937255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Como jogar"

[node name="QuitButton" type="Button" parent="Controls"]
margin_top = 138.0
margin_right = 312.0
margin_bottom = 164.0
custom_colors/font_color_hover = Color( 0, 0.0627451, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.937255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sair"

[node name="Transition_Out" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Controls/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Controls/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Controls/StartButton2" to="." method="_on_StartButton2_pressed"]
[connection signal="pressed" from="Controls/QuitButton" to="." method="_on_QuitButton_pressed"]
